# conex-pallet-optimization

./: .gitignore  LICENSE  README.md  performance_checker.ipynb  performance_results.csv
app/: Dockerfile  pyproject.toml  requirements.txt
app/src/: __init__.py
app/src/data/: synthetic_generator.py
app/src/data/real_data/: shipoci_dataset.csv  shipoci_dataset_transformed_2.csv
app/src/data/synthetic_data/: pallet_dataset_2.csv
app/src/models/: models.py
app/src/routers/: router.py
app/src/templates/: index.html
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/data/: transform_dataset.py
backend/src/data/real_data/: shipoci_dataset_transformed_2.csv
backend/src/data/synthetic_data/: pallet_dataset.csv
backend/src/models/: models.py
backend/src/routers/: router.py
backend/src/schemas/: schemas.py
backend/src/templates/: index.html
frontend/: package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/Model/: Card.jsx
frontend/src/assets/css/: style.css
frontend/src/components/: ContainerView.jsx  Form.jsx
