[project]
name = "connex-pallet-optimization"
version = "0.1.0"
description = "Optimization Methods Assessment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=3.0.2",
    "pulp>=3.3.0",
    "pydantic>=2.10.6",
]
